fix(website): hero body contrast for light mode

--- a/website/src/css/_hero.css
+++ b/website/src/css/_hero.css
@@ -59,11 +59,10 @@
   padding-right: var(--spacer-2);
   color: var(--light);
   backdrop-filter: blur(10px);
-  background-image: radial-gradient(circle at bottom, rgba(49, 26, 75, 0), rgba(14, 7, 19, 0.50));
+  background-image: radial-gradient(circle at bottom, rgba(49, 26, 75, .3), rgba(14, 7, 19, 0.50));
   border-top-left-radius: var(--border-radius);
   border-top-right-radius: var(--border-radius);
   box-shadow: 0 .5rem 1rem #00000026,inset 0 -1px #ffffff26;
-
   border-width: 0 1px 0 1px;
   border-style: solid;
   border-color: #ffffff2e;
